--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <dd>기타 사항</dd>
             </dl>
             <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
+              <dt>회사 불라불라 : 2020 ~ 2022</dt>
               <dd>회사에서 맡았던 업무</dd>              
             </dl>  
         </section>
@@ -73,7 +73,7 @@
           <h2>학력(education)</h2>
           <!-- 학력 수정 -->
           <p>2018.02 - XX 대학교 졸업(전공: 컴퓨터공학)</p>
-          <p>2012.02 - XX 고등학교 졸업</p>
+          <p>2012.02 - 연무 고등학교 졸업</p>
           <p> ... </p>
         </section>
       </artile>
