--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div>열심열심 나 열심</div>
   <div id="container">
     <header>
       <!-- 이름을 가장 위쪽에 -->
